--- a/public/index.html
+++ b/public/index.html
@@ -41,23 +41,22 @@ window.reset = function() {
   console.log('✅ Reset completo. Recarga la página.');
 }
 
-// Variables Globales
+// Variables
 let tapCount = 0;
 let tapTimer = null;
-let cardOpenedThisSession = false; // Control para el +1 del concepto
+let cardOpenedThisSession = false; 
 
 // Tracking
 function track(event, data = {}) {
   if (typeof gtag !== 'undefined') gtag('event', event, { event_category: 'app_engagement', ...data });
 }
 
-// Streak Update
+// Streak
 function updateStreak() {
   const today = new Date().toDateString();
   const lastVisit = getLocal('last_visit');
   let streak = getLocal('streak', 0);
 
-  // Fix primer día: Si es 0, lo iniciamos en 1 hoy mismo
   if (streak === 0) {
     streak = 1;
     saveLocal('streak', 1);
@@ -76,7 +75,6 @@ function updateStreak() {
   return newStreak;
 }
 
-// Book Counter
 function incrementBooks() {
   const count = getLocal('books_opened', 0) + 1;
   saveLocal('books_opened', count);
@@ -85,22 +83,23 @@ function incrementBooks() {
   return count;
 }
 
-// LÓGICA DE CONCEPTOS (+4 al revelar, +1 al abrir)
+// LÓGICA DE CONCEPTOS (+4 y +1)
 function addConcepts(amount) {
   let current = getLocal('concepts', 0);
   const books = getLocal('books_opened', 0);
-  
-  // Migración para usuarios existentes que tengan 0 conceptos pero muchos libros
-  if (current === 0 && books > 1) { 
-    current = books * 5; 
-  }
-  
+  if (current === 0 && books > 1) { current = books * 5; } // Migración
   const newVal = current + amount;
   saveLocal('concepts', newVal);
   return newVal;
 }
 
-// Rewards System
+// WebView Detection Helper
+function isWebView(){ 
+  const ua = navigator.userAgent || navigator.vendor || window.opera; 
+  return (/wv/i.test(ua) || /WebView/i.test(ua) || (ua.includes("Android") && ua.includes("Version/")) || (ua.includes("iPhone") && !ua.includes("Safari"))); 
+}
+
+// Rewards
 const surprises = [
   { type: 'rare', msg: '✨ Libro raro descubierto', chance: 0.12 },
   { type: 'streak', msg: '🔥 Racha activa', chance: 0.18 },
@@ -117,7 +116,7 @@ function getRandomSurprise() {
   return surprises[surprises.length - 1];
 }
 
-// Social Proof Fake-Real
+// Social Proof
 function getRealisticUserCount() {
   const base = 28;
   const variance = Math.floor(Math.random() * 8);
@@ -176,10 +175,12 @@ function getRealisticUserCount() {
 .port-text p{ font-size:clamp(1.2rem,4vw,1.8rem); font-weight:600; opacity:.9; }
 .emoji-big{ font-size:clamp(1.6rem,5vw,2.8rem); filter:drop-shadow(0 4px 8px rgba(0,0,0,.3)); }
 
-/* CTA (4 Botones) */
+/* CTA (4 BOTONES) */
 .cta{ 
   position:fixed; bottom:3vh; left:50%; transform:translateX(-50%); z-index:100; 
-  display:none; gap: clamp(0.5rem, 2vw, 0.9rem); justify-content:center; 
+  display:none; 
+  gap: clamp(0.5rem, 2vw, 0.9rem); 
+  justify-content:center; 
 }
 .cta button{
   width:clamp(3.5rem,min(8vw,8vh),4.5rem); height:clamp(3.5rem,min(8vw,8vh),4.5rem);
@@ -190,7 +191,7 @@ function getRealisticUserCount() {
 #otro{ background:linear-gradient(135deg,#5fbfff,#1e90ff); color:#fff; }
 #fisico{ background:linear-gradient(135deg,#b2f8c8,#42d97c); color:#000; }
 #share{ background:linear-gradient(135deg,#ff8a00,#ff3d3d); color:#fff; }
-#like{ background:linear-gradient(135deg, #ff416c, #ff4b2b); color:#fff; }
+#like { background:linear-gradient(135deg, #ff416c, #ff4b2b); color:#fff; } 
 
 /* Overlay */
 #tarjetaOverlay { display:none; position:fixed; inset:0; z-index:999; align-items:center; justify-content:center; background: radial-gradient(circle, rgba(0,0,0,0.90), rgba(0,0,0,0.98)); backdrop-filter: blur(5px); }
@@ -198,28 +199,20 @@ function getRealisticUserCount() {
 body.webview #tarjetaCard { height:650px !important; }
 @keyframes cardIn { to { opacity:1; transform:scale(1); } }
 
-/* ✨ BADGE COMPACTO NIVEL DIOS (CENTRADO ABSOLUTO + ESPACIADO) */
+/* ✨ BADGE COMPACTO NIVEL DIOS (CENTRADO ABSOLUTO) */
 #progressBadge {
   position: fixed;
   top: 15px;
-  /* CENTRADO INFALIBLE: Márgenes automáticos con left/right 0 */
   left: 0; right: 0; margin: 0 auto;
-  
   width: fit-content; max-width: 90vw;
   z-index: 150;
-  
   background: rgba(20,24,38,0.90); border: 1px solid rgba(255,255,255,0.12);
   padding: 6px 20px; border-radius: 99px; color: #dfe9ff;
   backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px);
-  
-  opacity: 0; 
-  /* Animación SOLO vertical */
-  animation: badgeDrop 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
-  
+  opacity: 0; animation: badgeDrop 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
   box-shadow: 0 4px 20px rgba(0,0,0,0.3); text-align: center;
   cursor: pointer; user-select: none; pointer-events: auto;
 }
-
 @keyframes badgeDrop { 
   0% { opacity: 0; transform: translateY(-40px); } 
   100% { opacity: 1; transform: translateY(0); } 
@@ -227,9 +220,7 @@ body.webview #tarjetaCard { height:650px !important; }
 
 #progressBadge .line1 {
   display: block; font-size: 10px; text-transform: uppercase; letter-spacing: 1.2px; 
-  opacity: 0.65; 
-  margin-bottom: 3px; /* Espacio extra para que no se pegue */
-  font-weight: 700; color: #a0aec0;
+  opacity: 0.65; margin-bottom: 3px; font-weight: 700; color: #a0aec0;
 }
 #progressBadge .line2 {
   display: flex; align-items: center; justify-content: center; gap: 6px; flex-wrap: wrap;
@@ -483,7 +474,7 @@ function render(){
   }
 }
 
-// LOGICA ENGAGEMENT (+4 al revelar)
+// LOGICA ENGAGEMENT
 function handleBookReveal() {
   const booksCount = incrementBooks();
   addConcepts(4); 
@@ -520,7 +511,7 @@ function handleBookReveal() {
   }
 }
 
-// === EFECTO LIKE & SHARE MODAL ===
+// === EFECTO LIKE, SHARE MODAL & DATA TRACKING ===
 btnLike.onclick = (e) => {
   const rect = btnLike.getBoundingClientRect();
   const centerX = rect.left + rect.width / 2;
@@ -531,6 +522,19 @@ btnLike.onclick = (e) => {
   // Enviar Data a Google Sheet
   try {
     const frasesVistas = libro.frases.join(" | ");
+
+    // INTELIGENCIA DE PLATAFORMA
+    let platform = "Web";
+    const ua = navigator.userAgent || navigator.vendor || window.opera;
+    if (/android/i.test(ua)) {
+        platform = "Android";
+        if (/wv/i.test(ua) || /Version\//i.test(ua)) platform += " (App)";
+    }
+    else if (/iPad|iPhone|iPod/.test(ua) && !window.MSStream) {
+        platform = "iOS";
+        if (!ua.includes("Safari")) platform += " (App)";
+    }
+
     // URL DE TU APPS SCRIPT
     const urlScript = "https://script.google.com/macros/s/AKfycbyJdF6QZ4b321MUzzkpkvNLEL4-ZJDdgzs7gXTS6bhtI0HMgnJQnAm7tZMeo7u8oatE/exec";
     
@@ -541,7 +545,11 @@ btnLike.onclick = (e) => {
         "action": "like",
         "book": libro.titulo,
         "author": libro.autor,
-        "phrases": frasesVistas
+        "phrases": frasesVistas,
+        // DATOS REALES DE INTELIGENCIA:
+        "streak": getLocal('streak', 0),
+        "total_books": getLocal('books_opened', 0),
+        "platform": platform
       })
     });
     track('like_clicked', { book: libro.titulo });
@@ -578,11 +586,11 @@ btnLibro.onclick = async() => {
 function luminance(hex) { try { const c = hex.replace("#","").match(/.{1,2}/g).map(x=>parseInt(x,16)/255); const f = v => v<=.03928 ? v/12.92 : Math.pow((v+.055)/1.055,2.4); return 0.2126*f(c[0])+0.7152*f(c[1])+0.0722*f(c[2]); } catch { return 0; } }
 function pickTextColor(bg) { try { return luminance(bg) > 0.35 ? "#000" : "#fff"; } catch { return "#fff"; } }
 
-// SHARE & TARJETA (+1 CONCEPTO AL ABRIR TARJETA)
+// SHARE & TARJETA
 btnShare.onclick = () => {
   const t = libro.tarjeta; const card = document.getElementById("tarjetaCard");
   
-  // +1 Concepto
+  // +1 Concepto al abrir tarjeta
   if (!cardOpenedThisSession) {
     addConcepts(1);
     updateBadge(); 
@@ -615,7 +623,6 @@ btnShare.onclick = () => {
 document.getElementById("tarjetaOverlay").onclick=()=>{ document.getElementById("tarjetaOverlay").style.display="none"; };
 
 // INIT
-function isWebView(){ const ua=navigator.userAgent||navigator.vendor||window.opera; return (/wv/i.test(ua)||/WebView/i.test(ua)||(ua.includes("Android")&&ua.includes("Version/"))||(ua.includes("iPhone")&&!ua.includes("Safari"))); }
 if(isWebView()) document.body.classList.add("webview");
 
 function pickLibroNoRepetido(libros){
